# Local-AI-Receptionist

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  bot.py  bot_flows.py  dashboard.sh  dashboard.toml  goto.sh  pyproject.toml  pytest.ini  qa.py  requirements.txt  tools.py  web_dashboard.py
.claude/: settings.json
call_logs/: .gitkeep  call_20260504_064138.json  call_20260504_064908.json  call_20260504_071817.json  call_20260504_072828.json  call_20260504_073614.json  call_20260504_092829.json  call_20260504_094115.json  call_20260504_095331.json  call_20260504_095413.json  call_20260504_100333.json  call_20260504_100431.json  call_20260504_101344.json  call_20260504_101628.json  call_20260504_103026.json  call_20260504_110814.json  call_20260504_111102.json  call_20260504_112844.json  call_20260504_113018.json  call_20260504_114444.json  call_20260504_120438.json  call_20260504_120718.json  call_20260504_123112.json  call_20260504_124849.json  call_20260504_125414.json  call_20260504_130446.json  call_20260504_131212.json  call_20260504_132122.json  call_20260504_133048.json  call_20260504_140500.json  call_20260504_141806.json  call_20260504_142630.json  call_20260504_143408.json  call_20260504_143655.json  call_20260504_144819.json  callback_20260504_124143.json  callback_20260504_124207.json  callback_20260504_125354.json  callback_20260504_125402.json  callback_20260504_125904.json  (+11 more)
casaos/: README.md  docker-compose.yml  nginx.conf
config/: dental.yaml  loader.py
docs/: ITERATION_LOG.md  QA_WORKFLOW.md  RUNBOOK.md
(+32 files in other folders)
