[project]
name = "pipecat-phone-bot-example"
version = "0.1.0"
description = "Twilio phone bot example using Pipecat"
requires-python = ">=3.11"
dependencies = [
    "pipecat-ai[ollama,whisper,piper,openai,silero,websocket,runner]>=1.1.0",
    "pipecatcloud>=0.2.4",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "piper-tts>=1.4.2",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "ruff~=0.12.1",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["I"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchaudio = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
